address some nits